# google_timesfm

./: .gitattributes  .gitignore  TimesFM_Forecasting_Comparison_Notebook.ipynb  time_series.ipynb  timesfm.ipynb
checkpoints/timesfm-2.5-200m-pytorch/: README.md  model.safetensors
src/timesfm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
timesfm-experiments/: README.md  TimesFM_Forecasting_Comparison_Notebook.ipynb  app.py  app_client.py  app_fastapi.py  app_with_openai.py  bike_rental_forecast.py  bike_rental_forecast_finetuning.py  bike_rental_forecast_with_stats.py  gold_price_forecast.py  main.py  pyproject.toml
timesfm-experiments/datas/: GoldPrices.csv
timesfm-experiments/timesfm/: pyproject.toml
timesfm-experiments/timesfm/src/timesfm/timesfm_2p5/: timesfm_2p5_torch.py
