[project]
name = "timesfm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-experimental>=0.0.42",
    "langchain-openai>=1.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlforecast>=1.0.2",
    "nixtla>=0.7.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
    "xgboost>=3.1.1",
]
